fix(header): use width 100% instead of 100vw to prevent horizontal overflow

--- a/assets/css/src/_header-eternal.css
+++ b/assets/css/src/_header-eternal.css
@@ -36,7 +36,7 @@
 	left: 0;
 	right: 0;
 	z-index: 100;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -286,7 +286,7 @@
 	position: fixed;
 	left: 0;
 	right: 0;
-	width: 100vw;
+	width: 100%;
 	--nav-underline-color: var(--header-nav-color);
 }
 
@@ -305,7 +305,7 @@
 	position: fixed;
 	left: 0;
 	right: 0;
-	width: 100vw;
+	width: 100%;
 	background-color: var(--header-bg-transparent);
 }
 
